# minsk_transport_crossplatform

./: .gitignore  .metadata  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/translations/: be.json  en.json  ru.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app.dart  routes.dart
lib/core/constants/: constants.dart
lib/core/themes/: app_theme.dart
lib/core/utils/: platform_utils.dart  responsive_utils.dart
lib/core/widgets/: adaptive_scaffold.dart  loading_widget.dart  responsive_card.dart
lib/data/local/: database_helper.dart
lib/data/models/: route_stop.dart  route_stop.g.dart  transport_route.dart  transport_route.g.dart
lib/data/repositories/: route_repository.dart
lib/features/auth/providers/: auth_provider.dart
lib/features/auth/screens/: login_screen.dart
lib/features/favorites/providers/: favorites_provider.dart
lib/features/favorites/screens/: favorites_screen.dart
lib/localization/: app_localizations.dart
lib/services/: connectivity_service.dart  notification_service.dart  weather_service.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
test/integration/: app_test.dart
test/unit/: route_repository_test.dart
test/widget/: route_card_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
